@@ -14,6 +14,7 @@
 	- rollback: don't force erase rpmdb headers, rollback downgrade will do.
 	- remove (broken) test programs trb.c and tgi.c.
 	- add fsm vectors for cpio peculier routines.
+	- make the fcntl transaction lock sensitive to --root (#151255).
 
 4.4.2 -> 4.4.3:
 	- start 4.4.3 devel.
